Add tests for upgrading and downgrading users with null seat type